--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,7 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/app/ui/design/theme.scss", "src/styles.scss"],
+            "styles": ["src/app/ui/material/main-theme.scss", "src/styles.scss"],
             "scripts": []
           },
           "configurations": {
@@ -79,7 +79,7 @@
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/app/ui/design/theme.scss", "src/styles.scss"],
+            "styles": ["src/app/ui/material/main-theme.scss", "src/styles.scss"],
             "scripts": []
           }
         }
